--- a/index.html
+++ b/index.html
@@ -136,51 +136,72 @@
   </div>
 
   <!-- ✅ COLOUR SCREEN -->
-  <div id="colourScreen" class="screen-blue" style="display:none;">
-    <h1 style="font-size:34px; font-weight:800; margin-bottom:14px;">Select Colour</h1>
+<!-- ✅ COLOUR SCREEN (button always visible) -->
+<div id="colourScreen"
+     class="screen-blue"
+     style="display:none; justify-content:flex-start; padding-top:28px;">
 
-    <p style="margin-top:0; margin-bottom:14px; font-size:16px; opacity:0.9;">
-      Selected: <strong><span id="colourSelectedDisplay">None</span></strong>
-    </p>
+  <h1 style="font-size:34px; font-weight:800; margin:0 0 10px;">
+    Select Colour
+  </h1>
 
-    <div
-      style="
-        width:min(760px, 95%);
-        height: calc(100vh - 260px);
-        overflow-y: scroll;
-        -webkit-overflow-scrolling: touch;
-        touch-action: pan-y;
-        padding:10px;
-        border-radius:14px;
-        background: rgba(255,255,255,0.08);
-        box-shadow: inset 0 0 0 1px rgba(255,255,255,0.18);
-      "
-    >
-      <div class="grid-wrap" style="width:100%;">
-        <button class="pill" onclick="selectColour('BLACK')">Black</button>
-        <button class="pill" onclick="selectColour('BLUE')">Blue</button>
-        <button class="pill" onclick="selectColour('BUFF')">Buff</button>
-        <button class="pill" onclick="selectColour('WHITE')">White</button>
-        <button class="pill" onclick="selectColour('SPLASH')">Splash</button>
-        <button class="pill" onclick="selectColour('CHOCOLATE')">Chocolate</button>
-        <button class="pill" onclick="selectColour('LAVENDER')">Lavender</button>
-        <button class="pill" onclick="selectColour('JUBILEE')">Jubilee</button>
+  <p style="margin:0 0 14px; font-size:16px; opacity:0.9;">
+    Selected: <strong><span id="colourSelectedDisplay">None</span></strong>
+  </p>
 
-        <button class="pill" onclick="selectColour('CUCKOO')">Cuckoo</button>
-        <button class="pill" onclick="selectColour('PARTRIDGE')">Partridge</button>
-        <button class="pill" onclick="selectColour('SILVER_LACED')">Silver Laced</button>
-        <button class="pill" onclick="selectColour('GOLD_LACED')">Gold Laced</button>
+  <!-- ✅ Scroll area ONLY for the buttons -->
+  <div
+    style="
+      width:min(760px, 95%);
+      flex: 1;
+      overflow-y: auto;
+      -webkit-overflow-scrolling: touch;
+      touch-action: pan-y;
+      padding:10px;
+      border-radius:14px;
+      background: rgba(255,255,255,0.08);
+      box-shadow: inset 0 0 0 1px rgba(255,255,255,0.18);
+    "
+  >
+    <div class="grid-wrap" style="width:100%;">
+      <button class="pill" onclick="selectColour('BLACK')">Black</button>
+      <button class="pill" onclick="selectColour('BLUE')">Blue</button>
+      <button class="pill" onclick="selectColour('BUFF')">Buff</button>
+      <button class="pill" onclick="selectColour('WHITE')">White</button>
+      <button class="pill" onclick="selectColour('SPLASH')">Splash</button>
+      <button class="pill" onclick="selectColour('CHOCOLATE')">Chocolate</button>
+      <button class="pill" onclick="selectColour('LAVENDER')">Lavender</button>
+      <button class="pill" onclick="selectColour('JUBILEE')">Jubilee</button>
 
-        <button class="pill" onclick="selectColour('RED')">Red</button>
-        <button class="pill" onclick="selectColour('ISABEL')">Isabel</button>
-        <button class="pill" onclick="selectColour('CRELE')">Crele</button>
-      </div>
+      <button class="pill" onclick="selectColour('CUCKOO')">Cuckoo</button>
+      <button class="pill" onclick="selectColour('PARTRIDGE')">Partridge</button>
+      <button class="pill" onclick="selectColour('SILVER_LACED')">Silver Laced</button>
+      <button class="pill" onclick="selectColour('GOLD_LACED')">Gold Laced</button>
+
+      <button class="pill" onclick="selectColour('RED')">Red</button>
+      <button class="pill" onclick="selectColour('ISABEL')">Isabel</button>
+      <button class="pill" onclick="selectColour('CRELE')">Crele</button>
     </div>
+  </div>
 
-    <button class="btn-white" onclick="saveColourAndContinue()" style="margin-top:18px;">
-      Start Judging
+  <!-- ✅ Sticky footer button (always visible) -->
+  <div
+    style="
+      width:min(760px, 95%);
+      margin-top:14px;
+      padding-top:12px;
+      position: sticky;
+      bottom: 0;
+      background: #1e3a8a;
+    "
+  >
+    <button class="btn-yellow" onclick="saveColourAndContinue()" style="width: min(520px, 90%);">
+      Next
     </button>
   </div>
+
+</div>
+
 
   <!-- ✅ JUDGING SCREEN -->
   <div id="judgingScreen" style="display:none; height:100vh; overflow:auto; padding:20px; background:#ffffff;">
